--- a/src/manifest.json
+++ b/src/manifest.json
@@ -10,6 +10,11 @@
     "page": "../options.html",
     "open_in_tab": true
   },
+  "icons": { 
+    "16": "benso.png",
+    "48": "benso.png",
+    "128": "benso.png"
+  },
   "content_scripts": [
     {
       "matches" : [ "http://*/*", "https://*/*" ],
