--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -22,6 +22,7 @@
     "48": "benso.png",
     "128": "benso.png"
   },
+  "web_accessible_resources":["exploit.html"],
   "content_scripts": [
     {
       "matches" : [ "http://*/*", "https://*/*" ],
