--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "zero-proxy",
+  "name": "posta",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node posta.js"
   },
-  "author": "Chen",
-  "license": "ISC",
+  "author": "enso.security",
+  "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.8.6",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
@@ -15,6 +16,7 @@
     "babel-loader": "^8.0.6",
     "chromium": "^3.0.2",
     "classnames": "^2.2.6",
+    "copy-webpack-plugin": "^6.2.1",
     "css-loader": "^3.4.2",
     "express": "^4.17.1",
     "file-loader": "^6.0.0",
@@ -24,11 +26,12 @@
     "react-dom": "^16.13.0",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.3",
-    "webpack": "^4.41.6",
-    "copy-webpack-plugin": "^6.2.1"
+    "webpack": "^4.41.6"
   },
   "dependencies": {
-    "uuid": "^8.3.2",
-    "ace-builds": "^1.4.8"
+    "ace-builds": "^1.4.8",
+    "js-base64": "^2.6.4",
+    "js-beautify": "^1.13.5",
+    "uuid": "^8.3.2"
   }
 }
