better dir structure

--- a/src/extension/manifest.json
+++ b/src/extension/manifest.json
@@ -7,7 +7,7 @@
     "scripts": ["background.js"]
   },
   "options_ui": {
-    "page": "../options.html",
+    "page": "../main.html",
     "open_in_tab": true
   },
   "browser_action": {
