--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -7,7 +7,7 @@
     "scripts": ["background.js"]
   },
   "options_ui": {
-    "page": "../main.html",
+    "page": "main.html",
     "open_in_tab": true
   },
   "browser_action": {
